Fix chip streching on firefox

--- a/src/molecules/Chip/Chip.pcss
+++ b/src/molecules/Chip/Chip.pcss
@@ -7,7 +7,7 @@
   display: flex;
   letter-spacing: 0.05rem;
   line-height: 1.25;
-  width: fit-content;
+  width: min-content;
   position: relative;
   text-decoration: none;
   align-items: center;
